--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,14 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "vector": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "algorithm": "cpp",
+        "chrono": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "string": "cpp"
     }
 }
